<resources>
    <string name="app_name">Управление пневматикой</string>
    <string name="tab_measurements">Измерения</string>
    <string name="tab_manual">Ручной</string>
    <string name="tab_auto">Автомат</string>
    <string name="tab_settings">Настройки</string>
    <string name="sensor_text">датчик</string>
    <string name="kg_text">кг</string>
    <string name="bar_text">бар</string>
    <string name="prompt_password_text">Введите пароль доступа</string>
    <string name="wrong_pass_text">Введённый пароль не верен</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_password">Пароль больше 3 символов</string>
    <string name="login_failed">"Login failed"</string>

    <string name="tab_title_1">Измерение</string>
    <string name="tab_title_2">Ручной</string>
    <string name="tab_title_3">Автомат</string>
    <string name="tab_title_4">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AP_name" translatable="false">Имя точки доступа</string>
    <string name="settings_page_password">Пароль вкладки Настройки</string>
    <string name="points_text">Точки</string>
    <string name="sensors_text">Датчики</string>
    <string name="pass_text">Пароль</string>
    <string name="ap_text">Точ Дос</string>
    <string name="pressure_text">Давление</string>
    <string name="old_pass_title">Текущий пароль</string>
    <string name="new_pass_title">Новый пароль</string>
    <string name="new_pass_repeat">Повтор нового пароля</string>
    <string name="ap_name_title">Введите имя точки доступа</string>
    <string name="d1_name">Датч 1</string>
    <string name="d2_name">Датч 2</string>
    <string name="d3_name">Датч 3</string>
    <string name="d4_name">Д4-Р</string>
    <string name="fwd_name">передний ход</string>
    <string name="bwd_name">задний ход</string>
    <string name="on_name">Вкл</string>
    <string name="off_name">Выкл</string>
    <string name="pulses_label">импульсы</string>
    <string name="prompt_hdr_feed_name">Введите название сигнала</string>
    <string name="first_point_calib_data">Значение в первой точке калибровки</string>
    <string name="second_point_calic_data">Вторая точка калибровки датчика</string>
    <string name="set_value_text">Задать</string>
    <string name="cancel_text">Отменить</string>
    <string name="ok_text">Принять</string>
    <string name="prompt_name_sensor">Введите название датчика</string>
    <string name="inbar_text">Значение в бар</string>
    <string name="inkg_text">Значение в кгс</string>
    <string name="repeat_txt">Повторить</string>
    <string name="Stop_app_text">Выйти</string>
</resources>